Update the "Move to Trash" action's and the "Delete" action's enabled state in the context menu for read only files/folders (also archives).

BUG: 294013
FIXED-IN: 4.11
REVIEW: 111160